--- a/style.css
+++ b/style.css
@@ -1,24 +1,42 @@
-body {
-	width:760px;
-	margin:40px auto;
-	font-family: Helvetica;
-	background-color: #ffff1a;
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,600,700);
+
+html, body {
+	  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%; 
+  font-family: 'Dosis', sans-serif;
 }
 
 h1 {
 	border-bottom:1px solid #dedede;
-	margin-bottom:20px;
+	margin-bottom:100px;
+	margin-left:120px;
 	padding-bottom:20px;
-	background-color:yellow;
+	background-color:white;
 }
 
 div {
 
-	background-color:yellow;
+	background-color:white;
 }
 
 img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+p
+.sentence {
+	margin-left: 120px;
+}
+
+
+
+.final {
+	position:absolute;
+	margin-left: 
+}
+
 }
